terraform/environments/cloud-platform/cluster-core/modules/multi-container-app-terraform/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${namespace}
  labels:
    pod-security.kubernetes.io/enforce: restricted
