terraform/environments/cloud-platform/cluster-core/modules/multi-container-app-terraform/manifests/content-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-api
  namespace: ${namespace}
  labels:
    app: content-api
spec:
  replicas: ${replicas}
  selector:
    matchLabels:
      app: content-api
  template:
    metadata:
      labels:
        app: content-api
    spec:
      containers:
        - name: content-api
          image: ${image_repository}:${image_tag}
          imagePullPolicy: IfNotPresent
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 4567
              protocol: TCP
