terraform/environments/cloud-platform/cluster-core/modules/multi-container-app-terraform/manifests/rails-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
  namespace: ${namespace}
  labels:
    app: rails-app
spec:
  replicas: ${replicas}
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
        - name: rails-app
          image: ${image_repository}:${image_tag}
          imagePullPolicy: IfNotPresent
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3000
              protocol: TCP
