terraform/environments/cloud-platform/cluster-core/modules/multi-container-app-terraform/manifests/content-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-api-service
  namespace: ${namespace}
  labels:
    app: content-api-service
spec:
  type: ClusterIP
  ports:
    - port: 4567
      targetPort: 4567
      protocol: TCP
      name: http
  selector:
    app: content-api
