terraform/environments/cloud-platform/cluster-core/modules/multi-container-app-terraform/manifests/rails-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app-service
  namespace: ${namespace}
  labels:
    app: rails-app-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: rails-app
